workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__endpoint__test__can_handle_add_request_command__unassignable_request_result.snap
---
source: workspaces/diff-engine/src/commands/endpoint.rs
expression: unassignable_request_result.unwrap_err()
---
Validation(
    "Command failed validation: request id must be assignable to add request, \"AddRequest(AddRequest { request_id: \\\"request_1\\\", path_id: \\\"path_1\\\", http_method: \\\"POST\\\" })\"",
)
